add: few mods and chat details sheet
