# api/src/routes/auth.routes.ts
@@ -6,14 +6,16 @@ import {
 } from "../controllers/auth.controllers";
 
 const router = express.Router();
+const authRouter = express.Router();
 
 // POST api/v1/auth/register --> REGISTER
-router.post("/register", registerUserHandler);
+authRouter.post("/register", registerUserHandler);
 
 // POST api/v1/auth/login --> LOGIN
-router.post("/login", loginUserHandler);
+authRouter.post("/login", loginUserHandler);
 
 // POST api/v1/auth/logout --> LOGOUT
-router.post("/logout", logoutUserHandler);
+authRouter.post("/logout", logoutUserHandler);
 
+router.use("/auth", authRouter);
 export default router;
