# api/src/swagger.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/register": {
+    "/auth/register": {
       "post": {
         "description": "",
         "parameters": [
@@ -44,7 +44,7 @@
         }
       }
     },
-    "/login": {
+    "/auth/login": {
       "post": {
         "description": "",
         "parameters": [
@@ -77,7 +77,7 @@
         }
       }
     },
-    "/logout": {
+    "/auth/logout": {
       "post": {
         "description": "",
         "responses": {
@@ -87,7 +87,7 @@
         }
       }
     },
-    "/": {
+    "/users/": {
       "get": {
         "description": "",
         "responses": {
@@ -107,46 +107,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "participantId": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       }
     },
-    "/search": {
+    "/users/search": {
       "get": {
         "description": "",
         "parameters": [
@@ -172,7 +135,68 @@
         }
       }
     },
-    "/update-group-details": {
+    "/conversations/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/group-conversation/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "groupName": {
+                  "example": "any"
+                },
+                "groupDescription": {
+                  "example": "any"
+                },
+                "groupParticipantsIds": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/group-conversation/update-group-details": {
       "put": {
         "description": "",
         "parameters": [
@@ -217,7 +241,7 @@
         }
       }
     },
-    "/add-user": {
+    "/group-conversation/add-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -265,7 +289,7 @@
         }
       }
     },
-    "/leave-group": {
+    "/group-conversation/leave-group": {
       "post": {
         "description": "",
         "parameters": [
@@ -304,7 +328,7 @@
         }
       }
     },
-    "/kick-user": {
+    "/group-conversation/kick-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -339,6 +363,42 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/individual-conversation/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "participantId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
